# PrimitiveWeb

./: .gitmodules  Cargo.toml  Procfile  rust-toolchain
.github/workflows/: main.yml
src/: api.rs  main.rs  primitive_request.rs  views.rs
static/css/: base.css
static/javascript/: home.js  queue_size.js  result.js
templates/: base.html.tera  home.html.tera  result.html.tera
templates/errors/: 404.html.tera
tests/: basic_integration.sh
